[package]
name = "tint2-bars"
version = "0.1.0"
authors = ["Duong Do Minh Chau <duongdominhchau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "*"
signal-hook = "*"
zbus = { version = "*" }
serde = { version = "*", features = ["derive"] }
zvariant = "*"
thiserror = "*"
