[package]
name = "obutils"
version = "0.1.0"
authors = ["Duong Do Minh Chau <duongdominhchau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0"
signal-hook = "0.3"
zbus = { version = "3.6" }
tokio = { version = "1.23", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
zvariant = "3.9"
thiserror = "1.0"
rand = "0.8"
walkdir = "2.3"
